# localrpc/swagger/swagger.json
@@ -510,6 +510,9 @@
         },
         "Owner": {
           "type": "string"
+        },
+        "Fee": {
+          "type": "string"
         }
       },
       "title": "Protobuf message implementation for struct ASPreImage"
@@ -652,6 +655,9 @@
           "format": "int64"
         },
         "Owner": {
+          "type": "string"
+        },
+        "Fee": {
           "type": "string"
         }
       },
@@ -832,6 +838,23 @@
         }
       }
     },
+    "protoTFPreImage": {
+      "type": "object",
+      "properties": {
+        "ChainID": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "TXOutIdx": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "Fee": {
+          "type": "string"
+        }
+      },
+      "title": "Protobuf message implementation for struct TFPreImage"
+    },
     "protoTXIn": {
       "type": "object",
       "properties": {
@@ -884,6 +907,9 @@
         },
         "DataStore": {
           "$ref": "#/definitions/protoDataStore"
+        },
+        "TxFee": {
+          "$ref": "#/definitions/protoTxFee"
         }
       },
       "title": "Protobuf message implementation for struct TXOut"
@@ -939,6 +965,18 @@
         }
       }
     },
+    "protoTxFee": {
+      "type": "object",
+      "properties": {
+        "TFPreImage": {
+          "$ref": "#/definitions/protoTFPreImage"
+        },
+        "TxHash": {
+          "type": "string"
+        }
+      },
+      "title": "Protobuf message implementation for struct TxFee"
+    },
     "protoUTXORequest": {
       "type": "object",
       "properties": {
@@ -976,6 +1014,9 @@
           "format": "int64"
         },
         "Owner": {
+          "type": "string"
+        },
+        "Fee": {
           "type": "string"
         }
       },
